--- a/LogbackAndroidUI/res/layout/logger_editor.xml
+++ b/LogbackAndroidUI/res/layout/logger_editor.xml
@@ -2,39 +2,110 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    
-    <ListView 
+    android:orientation="vertical" >
+
+    <ListView
         android:id="@android:id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        />
- 
+        android:layout_weight="70" />
+
     <TextView
         android:id="@+id/selection_text"
-        android:background="@color/grey05"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-	    <view
-	        class="edu.vu.isis.logger.ui.WellBehavedSpinner"
-	        android:id="@+id/level_spinner"
-	        android:layout_width="0dp"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="50"
-	        android:prompt="@string/level_prompt"/>
-	    <Button
-	        android:id="@+id/appender_button"
-	        android:layout_width="0dp"
-	        android:layout_height="wrap_content"
-	        android:text="Configure appenders"
-	        android:onClick="configureAppenders"
-	        android:layout_weight="50" />
-	</LinearLayout> 
-    
+        android:background="@color/grey05" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="30"
+        android:orientation="horizontal" >
+
+        <ScrollView
+            android:id="@+id/level_scrollview"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="50" >
+
+            <!--
+            Using wrap_content for the height of children in the scrollview
+            allows the child views to be as big as they need to be and the
+            scrollview takes care of the rest
+            -->
+
+            <LinearLayout
+                android:id="@+id/level_linearlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <Button
+                    android:id="@+id/trace_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/trace_text_name"
+                    android:onClick="onTraceButtonClick" />
+
+                <Button
+                    android:id="@+id/debug_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/debug_text_name"
+                    android:onClick="onDebugButtonClick" />
+
+                <Button
+                    android:id="@+id/info_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/info_text_name"
+                    android:onClick="onInfoButtonClick" />
+
+                <Button
+                    android:id="@+id/warn_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/warn_text_name"
+                    android:onClick="onWarnButtonClick" />
+
+                <Button
+                    android:id="@+id/error_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/error_text_name"
+                    android:onClick="onErrorButtonClick" />
+
+                <Button
+                    android:id="@+id/off_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/off_text_name"
+                    android:onClick="onOffButtonClick" />
+                
+                <Button
+                    android:id="@+id/clear_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/clear_text_name"
+                    android:onClick="onClearButtonClick" />
+            </LinearLayout>
+        </ScrollView>
+
+        <ScrollView
+            android:id="@+id/appender_scrollview"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="50" >
+
+            <LinearLayout
+                android:id="@+id/appender_linearlayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <!-- We will add checkboxes here programmatically -->
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
 </LinearLayout>
