--- a/LogbackAndroidUI/res/values/log_text.xml
+++ b/LogbackAndroidUI/res/values/log_text.xml
@@ -15,6 +15,10 @@
     <color name="fail_text_color">#FF00FB</color>
     <string name="fail_text_name">Fail</string>
     
+    <!-- Other log level option names -->
+    <string name="off_text_name">Off</string>
+    <string name="clear_text_name">Clear</string>
+    
     <color name="none_text_color">#FFFFFF</color><string name="none_text_name">None</string>
     <color name="trace_text_color">#42C0FF</color>
     <string name="trace_text_name">Trace</string>
