Fixed text file

--- a/LogbackAndroidUI/res/values/log_text.xml
+++ b/LogbackAndroidUI/res/values/log_text.xml
@@ -18,8 +18,8 @@
     <!-- Other log level option names -->
     <string name="off_text_name">Off</string>
     <string name="clear_text_name">Clear</string>
-    
-    <color name="none_text_color">#FFFFFF</color><string name="none_text_name">None</string>
+    <string name="none_text_name">None</string>
+    <color name="none_text_color">#FFFFFF</color>
     <color name="trace_text_color">#42C0FF</color>
     <string name="trace_text_name">Trace</string>
     
